opam-version: "1.2"
name: "qed"
version: "1.0"
homepage: "https://github.com/Frama-C/Qed"
maintainer: "Loïc Correnson <loic.correnson@cea.fr>"
authors: "Loïc Correnson <loic.correnson@cea.fr>"
license: "LGPL v2.1"
build: [make "build"]
build-doc: [make "doc"]
install: [make "install"]
remove: ["ocamlfind" "remove" "qed"]
depends: [ "jbuilder" {build} "zarith" ]
available: [ ocaml-version >= "4.04" ]
