opam-version: "1.2"
name: "qed"
version: "1.1"
homepage:    "https://github.com/Frama-C/Qed"
dev-repo:    "https://github.com/Frama-C/Qed.git"
bug-reports: "https://github.com/Frama-C/Qed/issues"         
maintainer: "Loïc Correnson <loic.correnson@cea.fr>"
authors: "Loïc Correnson <loic.correnson@cea.fr>"
license: "LGPL v2.1"
build: [make "build"]
build-doc: [make "doc"]
install: [make "install"]
remove: ["ocamlfind" "remove" "qed"]
depends: [ "jbuilder" {build} "zarith" ]
available: [ ocaml-version >= "4.04" ]
